# ram_chat

./: .gitignore  Dockerfile  agent_factory.py  app.py  config.py  email_downloader.py  email_tool.py  get_flik_menus.py  google_doc_tool.py  google_sheet_tool.py  handbook_tool.py  menu_items.py  menu_tool.py  pyproject.toml  requirements.txt  vector_store.py  web_scraper_tool.py
chroma_db_handbook_google_emb/: chroma.sqlite3
