[tool.poetry]
name = "ram-chat"
version = "0.1.0"
description = "A Cate School chat bot."
authors = ["James Kellogg <jamesbkellogg@gmail.com>"] # Simplified author format for [tool.poetry]
package-mode = false  # <--- Correct location

[tool.poetry.dependencies]
python = "^3.12"  # Moved 'requires-python' here and renamed to 'python'
streamlit = ">=1.45.0,<2.0.0"
langchain = ">=0.3.25,<0.4.0"
langchain-community = ">=0.3.23,<0.4.0"
langchain-core = ">=0.3.58,<0.4.0"
langchain-google-genai = ">=2.1.4,<3.0.0"
langchain-chroma = ">=0.2.3,<0.3.0"
pypdf = ">=5.4.0,<6.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
google-api-python-client = ">=2.169.0,<3.0.0"
google-auth-oauthlib = ">=1.2.2,<2.0.0"
google-auth-httplib2 = ">=0.2.0,<0.3.0"
protobuf = "~3.20.3" # hate this.
setuptools = "*"

# If you have development dependencies, they go here:
# [tool.poetry.group.dev.dependencies]
# pytest = "^7.0"
bs4 = "^0.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"] # poetry-core version might vary, >=1.0.0 is common
build-backend = "poetry.core.masonry.api"
